--- a/.hgignore
+++ b/.hgignore
@@ -1,3 +1,7 @@
 # Add any directories, files, or patterns you don't want to be tracked by version control
 __pycache__
 .idea
+
+HeatMapBcc/pyIBCC
+HeatMapBcc/HeatMapBCC
+
