--- a/laei_experiment_job_2.yaml
+++ b/laei_experiment_job_2.yaml
@@ -1,12 +1,12 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: lautenschlager-landuse-laei-job
+  name: lautenschlager-landuse-laei-automl-job
 spec:
   template:
     spec:
       containers:
-        - name: landuse-laei-container
+        - name: landuse-laei-automl-container
           image: ls6-staff-registry.informatik.uni-wuerzburg.de/lautenschlager-landuse:1.0
           imagePullPolicy: "IfNotPresent"
           resources:
