--- a/laei_experiment_job.yaml
+++ b/laei_experiment_job.yaml
@@ -1,46 +1,31 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  annotations:
-    kompose.cmd: kompose convert
-    kompose.version: 1.18.0 (06a2e56)
-  labels:
-    io.kompose.service: lautenschlager-laei-experiment
-  name: lautenschlager-landuse-laei-experiment
-  namespace: lautenschlager
+  name: lautenschlager-landuse-laei-automl-job
 spec:
   template:
-    metadata:
-      labels:
-        io.kompose.service: lautenschlager-landuse-laei-experiment
     spec:
       containers:
-        - image: ls6-staff-registry.informatik.uni-wuerzburg.de/lautenschlager-landuse:latest
-          imagePullPolicy: Always
-          name: lautenschlager-landuse-laei-experiment
-          command: ["python3", "laei_experiment.py"]
+        - name: landuse-laei-automl-container
+          image: ls6-staff-registry.informatik.uni-wuerzburg.de/lautenschlager-landuse:1.0
+          imagePullPolicy: "IfNotPresent"
           resources:
-            requests:
-              cpu: 2
-              memory: 8Gi
             limits:
-              cpu: 2
-              memory: 8Gi
+              cpu: "4"
+              memory: "6Gi"
+          command: ["python3", "laei_experiment.py"]
           volumeMounts:
             - mountPath: /code
-              name: landuse
-      restartPolicy: OnFailure
-      volumes:
-        - name: landuse
-          cephfs:
-            monitors:
-              - 132.187.14.16:6789
-              - 132.187.14.17:6789
-              - 132.187.14.19:6789
-              - 132.187.14.20:6789
-            user: lautenschlager
-            path: "/home/ls6/lautenschlager/code-2017-land-use"
-            secretRef:
-              name: ceph-secret
+              name: codedir
       imagePullSecrets:
         - name: ls6-staff-registry
+      restartPolicy: "Never"
+      volumes:
+        - name: codedir
+          cephfs:
+            monitors:
+              - 132.187.14.16,132.187.14.17,132.187.14.19,132.187.14.20
+            user: lautenschlager
+            path: /home/ls6/lautenschlager/code-2017-land-use
+            secretRef:
+              name: ceph-secret
